fix: text align on nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -306,6 +306,7 @@ article h2::after {
   gap: 1rem;
   margin: 0;
   pad: 0;
+  text-align: justify;
 }
 
 
@@ -360,6 +361,7 @@ a[target="_blank"] {
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
+    text-align: justify;
   }
  
   #about-me {
